after adding special condation

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
   "AppSettings": {
     "DBConnection": "Data Source = 172.17.203.100; Initial Catalog = KYC; user id = ipn; password = ipn",
     "GeneralAccountUrl": "https://pduatimlappv01.eg.albaraka.local:8743/imal_core_pws_imal_mig/pathservices/processGeneralAccounts/",
-    "GetCIFUrl": "https://pduatimlappv01.eg.albaraka.local:8743/imal_core_pws_imal_mig/pathservices/processCifManagement/"
+    "GetCIFUrl": "https://pduatimlappv01.eg.albaraka.local:8743/imal_core_pws_imal_mig/pathservices/processCifManagement/",
+    "GetSpicalCondition": "https://pduatimlappv01.eg.albaraka.local:8743/imal_core_pws_imal_mig/pathservices/processSpecialCondition/"
 
   }
 }
